--- a/Product/src/main/resources/templates/cart.html
+++ b/Product/src/main/resources/templates/cart.html
@@ -48,24 +48,20 @@
         </nav>
 <section style="height:auto;min-height:80vh">
 <table>
-    <tr>
-        <th>Product</th>
-        <th>Quantity</th>
-        <th>Price</th>
-        <th>Total</th>
-        <th>Action</th>
-    </tr>
-    <!-- Use server-side code to dynamically populate this table -->
-    <tr>
-        <td>Product Name</td>
-        <td>2</td>
-        <td>$20.00</td>
-        <td>$40.00</td>
-        <td><button>Delete</button></td>
-    </tr>
-    <!-- Add more rows dynamically based on the number of items in the shopping cart -->
+    <thead>
+        <tr>
+            <th>Product Name</th>
+            <th>Quantity</th>
+            <th>Price</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody id="cartItemsContainer">
+        
+    </tbody>
 </table>
-<p>Total: $40.00</p>
+<div id="total">
+</div>
 <form action="/checkout" method="post">
     <button type="submit">Checkout</button>
 </form>
@@ -75,4 +71,56 @@
    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
 </footer>
 </body>
+<script>
+	function getCart() {
+	    let cart = localStorage.getItem('cart');
+	    return cart ? JSON.parse(cart) : {};
+	}
+	
+	document.addEventListener('DOMContentLoaded', function() {
+	    let cartItems = getCart();
+	    console.log(cartItems);
+	
+	  
+	    const cartElement = document.querySelector('#cartItemsContainer');
+		
+	    if (cartElement) {
+	        cartItems.forEach(item => {
+	            let row = document.createElement('tr');
+	            row.innerHTML = `
+	                <td>${item.name}</td>
+	                <td>${item.quantity}</td>
+	                <td>${item.price}</td>
+	                <td><button onclick="deleteCartItem('${item.name}')">Delete</button></td>
+	            `;
+	            cartElement.appendChild(row);
+	        });
+	    }
+	    let total = getTotal();
+	    const totalElement = document.querySelector('#total')
+		if(totalElement){
+			totalElement.innerHTML = `<h2>Total: ${total} $</h2>`;
+		}
+	});
+
+	
+	function deleteCartItem(itemName) {
+	    let cart = getCart();
+	    let updatedCart = cart.filter(item => item.name != itemName);
+	    localStorage.setItem('cart', JSON.stringify(updatedCart));
+	    getTotal();
+	    location.reload(); 
+	}
+	
+	function getTotal(){
+		let cart = localStorage.getItem('cart');
+	    if (cart) {
+	        let cartItems = JSON.parse(cart);
+	        let total = cartItems.reduce((acc, item) => acc + item.price * item.quantity, 0);
+	        return total.toFixed(2);
+	    } else {
+	        return 0;
+	    }
+	}
+</script>
 </html>
