--- a/Product/src/main/resources/templates/admin/Users/List_Users.html
+++ b/Product/src/main/resources/templates/admin/Users/List_Users.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-       <title>List Category</title>
+       <title>List Users</title>
 </head>
 <style>
 <!--
@@ -40,44 +40,37 @@ background-color: whitesmoke;}
     </button>
 </div>
 <div class="container m-5 p-5 ">
-<h5 class="text-center mb-3">List Category</h5>
-  <form th:action="@{/categories/list_category}" method="GET" class="text-center">
-        <input class="form-control mb-2" type="text" name="search" th:value="${search}" placeholder="SEARCH BY NAME">
-        <button type="submit" class="btn btn-success">Search</button>
- </form>
-<a th:href="@{/categories/add_category}" class="btn btn-primary mb-2">Add Category</a>
+<h5 class="text-center mb-3">List Users</h5>
+ 
+
 
  <table class="table table-bordered ">
     <tr>
         <th>ID</th>
-        <th>Nom</th>
-        <th>Reference</th>
-        <th>Description</th>
-        <th>Image</th>
+        <th>userName</th>
+        <th>email</th>
+        <th>tel</th>
         <th>Action</th>
     </tr>
-       <tbody th:if="${categories.empty}">
+       <tbody th:if="${users.empty}">
          		<tr>
          			<td colspan="8" style="background-color:red;color:#fff" class="text-white text-center">No data</td>
          		</tr>
          </tbody> 
-         <tbody th:if="${!categories.empty}">
-         	    <tr th:each="category : ${categories}">
-        <td th:text="${category.id}"></td>
-        <td th:text="${category.name}"></td>
-        <td th:text="${category.reference}"></td>
-        <td th:text="${category.description}"></td>
+         <tbody th:if="${!users.empty}">
+         	    <tr th:each="user : ${users}">
+        <td th:text="${user.idUser}"></td>
+        <td th:text="${user.userName}"></td>
+        <td th:text="${user.email}"></td>
+        <td th:text="${user.tel}"></td>
+       
         <td>
-            <img th:src="@{'storage/'+${category.nomPhoto}}" alt="Photo du categorie" style="max-width: 100px; max-height: 100px;">
-        </td>
-        <td>
-            <a class="btn btn-warning" th:href="@{/categories/edit_category(id=${category.id})}">Modifier</a>
 
-<button type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#exampleModal'+${category.id}">
+<button type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#exampleModal'+${user.idUser}">
   Delete
 </button>
 <!-- Modal -->
-<div class="modal fade"  th:id="'exampleModal'+${category.id}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade"  th:id="'exampleModal'+${user.idUser}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -85,11 +78,11 @@ background-color: whitesmoke;}
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Would you like to delete  <span th:text="${category.name}"></span>
+        Would you like to delete  <span th:text="${user.userName}"></span>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <a th:href="@{/categories/delete_category(id=${category.id},page=${page_current},search=${search},per_page=${size})}"><button data-toggle="modal" data-target="#exampleModal" class="btn btn-danger">Delete</button></a> 
+        <a th:href="@{/users/delete(id=${user.idUser})}"><button data-toggle="modal" data-target="#exampleModal" class="btn btn-danger">Delete</button></a> 
       </div>
     </div>
   </div>
@@ -100,13 +93,7 @@ background-color: whitesmoke;}
          </tbody>
 
 </table>
- <nav aria-label="text-center">
-  <ul class="pagination text-center">
-    <li  th:each="p:${pages}" th:class="${p!=page_current} ? 'page-item active' : 'page-item'" aria-current="page">
-      <a class="page-link" th:href="@{/categories/list_category/(page=${p},search=${search},per_page=${size})}" th:text="${p+1}"></a>
-    </li>
-  </ul>
-</nav>
+
 </div>
  </div>
  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
