--- a/Product/src/main/resources/templates/admin/products/ListProduct.html
+++ b/Product/src/main/resources/templates/admin/products/ListProduct.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-       <title>List Category</title>
+       <title>List Products</title>
 </head>
 <style>
 <!--
@@ -20,11 +20,11 @@ background-color: whitesmoke;}
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item" >
-        <a th:href="@{/categories/list_category}"  class="nav-link active" aria-current="page">
+        <a th:href="@{/categories/list_category}" class="nav-link active" aria-current="page">
           <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"/></svg>
           Category
         </a>
-         <a  th:href="@{/Products/List_Products}"  class="nav-link active mt-2" aria-current="page">
+         <a th:href="@{/Products/List_Products}"  class="nav-link active mt-2" aria-current="page">
           <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"/></svg>
           Product
         </a>
@@ -40,44 +40,48 @@ background-color: whitesmoke;}
     </button>
 </div>
 <div class="container m-5 p-5 ">
-<h5 class="text-center mb-3">List Category</h5>
-  <form th:action="@{/categories/list_category}" method="GET" class="text-center">
+<h5 class="text-center mb-3">List Product</h5>
+  <form th:action="@{/Products/List_Products}" method="GET" class="text-center">
         <input class="form-control mb-2" type="text" name="search" th:value="${search}" placeholder="SEARCH BY NAME">
         <button type="submit" class="btn btn-success">Search</button>
  </form>
-<a th:href="@{/categories/add_category}" class="btn btn-primary mb-2">Add Category</a>
+<a th:href="@{/Products/addProduct}" class="btn btn-primary mb-2">Add Product</a>
 
  <table class="table table-bordered ">
     <tr>
         <th>ID</th>
         <th>Nom</th>
         <th>Reference</th>
-        <th>Description</th>
+        <th>price</th>
+        <th>quantityInStock</th>
+        <th>category</th>
         <th>Image</th>
         <th>Action</th>
     </tr>
-       <tbody th:if="${categories.empty}">
+       <tbody th:if="${products.empty}">
          		<tr>
          			<td colspan="8" style="background-color:red;color:#fff" class="text-white text-center">No data</td>
          		</tr>
          </tbody> 
-         <tbody th:if="${!categories.empty}">
-         	    <tr th:each="category : ${categories}">
-        <td th:text="${category.id}"></td>
-        <td th:text="${category.name}"></td>
-        <td th:text="${category.reference}"></td>
-        <td th:text="${category.description}"></td>
+         <tbody th:if="${!products.empty}">
+         	    <tr th:each="product : ${products}">
+        <td th:text="${product.id}"></td>
+        <td th:text="${product.name}"></td>
+        <td th:text="${product.reference}"></td>
+        <td th:text="${product.price}"></td>
+         <td th:text="${product.quantityInStock}"></td>
+              <td th:text="${product.Category.name}"></td>
         <td>
-            <img th:src="@{'storage/'+${category.nomPhoto}}" alt="Photo du categorie" style="max-width: 100px; max-height: 100px;">
+            <img th:src="@{'storage/'+${product.photo}}" alt="Photo du categorie" style="max-width: 100px; max-height: 100px;">
         </td>
         <td>
-            <a class="btn btn-warning" th:href="@{/categories/edit_category(id=${category.id})}">Modifier</a>
+            <a class="btn btn-warning" th:href="@{/Products/editProduct(id=${product.id})}">Modifier</a>
 
-<button type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#exampleModal'+${category.id}">
+<button type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#exampleModal'+${product.id}">
   Delete
 </button>
 <!-- Modal -->
-<div class="modal fade"  th:id="'exampleModal'+${category.id}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade"  th:id="'exampleModal'+${product.id}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -85,11 +89,11 @@ background-color: whitesmoke;}
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Would you like to delete  <span th:text="${category.name}"></span>
+        Would you like to delete  <span th:text="${product.name}"></span>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <a th:href="@{/categories/delete_category(id=${category.id},page=${page_current},search=${search},per_page=${size})}"><button data-toggle="modal" data-target="#exampleModal" class="btn btn-danger">Delete</button></a> 
+        <a th:href="@{/Products/deleteProduct(id=${product.id},page=${page_current},search=${search},per_page=${size})}"><button data-toggle="modal" data-target="#exampleModal" class="btn btn-danger">Delete</button></a> 
       </div>
     </div>
   </div>
@@ -103,7 +107,7 @@ background-color: whitesmoke;}
  <nav aria-label="text-center">
   <ul class="pagination text-center">
     <li  th:each="p:${pages}" th:class="${p!=page_current} ? 'page-item active' : 'page-item'" aria-current="page">
-      <a class="page-link" th:href="@{/categories/list_category/(page=${p},search=${search},per_page=${size})}" th:text="${p+1}"></a>
+      <a class="page-link" th:href="@{/Products/List_Products/(page=${p},search=${search},per_page=${size})}" th:text="${p+1}"></a>
     </li>
   </ul>
 </nav>
