--- a/Product/src/main/resources/templates/index.html
+++ b/Product/src/main/resources/templates/index.html
@@ -55,26 +55,24 @@
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5" th:each="product: ${products}">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            
-                            <img class="card-img-top" th:src="@{'storage/'+${product.photo}}" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder" th:text="${product.name}"></h5>
-                                    <!-- Product price-->
-                                    <span th:text="${product.price}"></span>
-            
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-
-                                <div th:onclick="addToCart('${product.name}', '${product.photo}', ${product.price})" class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add Card</a></div>
-                            </div>
-  
+						    <div class="card h-100">
+						        <!-- Product image -->
+						        <img class="card-img-top" th:src="@{'storage/' + ${product.photo}}" alt="..." />
+						        <!-- Product details -->
+						        <div class="card-body p-4">
+						            <div class="text-center">
+						                <!-- Product name -->
+						                <h5 class="fw-bolder" th:text="${product.name}"></h5>
+						                <!-- Product price -->
+						                <span th:text="${product.price}"></span>
+						            </div>
+						        </div>
+						        <!-- Product actions -->
+						       <div th:attr="onclick='addToCart(' + ${product.id} + ', \'' + ${product.name} + '\', ' + ${product.price} + ')'" class="text-center">
+								    <a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a>
+								</div>
+						    </div>
+						</div>
                         </div>
                     </div>
                    
@@ -93,9 +91,10 @@
     </body>
     <script>
     
-    function addToCart(name, photo, price) {
+    
+    function addToCart(id,name, price) {
         let cart = localStorage.getItem('cart');
-        let product = { name: name, photo: photo, price: price, quantity: 1 };
+        let product = {id:id, name: name, price: price, quantity: 1 };
 
         if (!cart) {
             cart = [];
