--- a/Product/src/main/resources/templates/admin/commande/list_commande.html
+++ b/Product/src/main/resources/templates/admin/commande/list_commande.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-       <title>List Users</title>
+       <title>List Commandes</title>
 </head>
 <style>
 <!--
@@ -31,73 +31,53 @@ background-color: whitesmoke;}
         <a  th:href="@{/users/list}" class="nav-link active mt-2" aria-current="page">
           <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"/></svg>
           Users
-        </a>
-         <a  th:href="@{/commande/list}" class="nav-link active mt-2" aria-current="page">
+        </a> 
+        <a  th:href="@{/commande/list}" class="nav-link active mt-2" aria-current="page">
           <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"/></svg>
           Commandes
         </a>
       </li>
     </ul>
     <hr>
-    <button class="btn btn-info"   >
+    <button class="btn btn-info">
     	<a th:href="@{/users/logout}">Logout</a>
     </button>
-</div>
-<div class="container m-5 p-5 ">
-<h5 class="text-center mb-3">List Users</h5>
- 
-
-
- <table class="table table-bordered ">
+	</div>
+	<div class="container m-5 p-5 ">
+	<h5 class="text-center mb-3">List Commande</h5>
+	<form th:action="@{/commande/list}" method="GET" class="text-center">
+	        <select class="form-control mb-2" name="status" th:value="${status}" placeholder="FILTER BY STATUS">
+			    <option value="">-- Select Status --</option>
+			    <option th:each="option : ${statusOptions}" th:value="${option}" th:text="${option}"></option>
+			</select>
+	        <button type="submit" class="btn btn-success">Search</button>
+	</form>
+ <table class="table table-bordered mt-5">
     <tr>
         <th>ID</th>
-        <th>userName</th>
-        <th>email</th>
-        <th>tel</th>
+        <th>Date</th>
+        <th>Client</th>
+        <th>Status</th>
         <th>Action</th>
     </tr>
-       <tbody th:if="${users.empty}">
+       <tbody th:if="${commandes.empty}">
          		<tr>
          			<td colspan="8" style="background-color:red;color:#fff" class="text-white text-center">No data</td>
          		</tr>
          </tbody> 
-         <tbody th:if="${!users.empty}">
-         	    <tr th:each="user : ${users}">
-        <td th:text="${user.idUser}"></td>
-        <td th:text="${user.userName}"></td>
-        <td th:text="${user.email}"></td>
-        <td th:text="${user.tel}"></td>
-       
-        <td>
-
-<button type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#exampleModal'+${user.idUser}">
-  Delete
-</button>
-<!-- Modal -->
-<div class="modal fade"  th:id="'exampleModal'+${user.idUser}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Confirme Deleted</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        Would you like to delete  <span th:text="${user.userName}"></span>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <a th:href="@{/users/delete(id=${user.idUser})}"><button data-toggle="modal" data-target="#exampleModal" class="btn btn-danger">Delete</button></a> 
-      </div>
-    </div>
-  </div>
-</div>
-
-        </td>
-    </tr>
-         </tbody>
+         <tbody th:if="${!commandes.empty}">
+        <tr th:each="commande : ${commandes}">
+	        <td th:text="${commande.idCommande}"></td>
+	        <td th:text="${commande.dateCommande}"></td>
+	        <td th:text="${commande.client.userName}"></td>
+        	<td th:text="${commande.status}"></td>
+        	<td>
+        	<a class="btn btn-warning" th:href="@{/commande/editCommande(id=${commande.idCommande})}" >Modifier</a>
+        	</td>     
+   </tr>
+ </tbody>
 
 </table>
-
 </div>
  </div>
  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
