--- a/Product/src/main/resources/templates/cart.html
+++ b/Product/src/main/resources/templates/cart.html
@@ -30,28 +30,18 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" th:href="@{/}">Start Bootstrap</a>
+                <a class="navbar-brand" th:href="@{/}">E-Commerce</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">All Products</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-                            </ul>
-                        </li>
+                       
                     </ul>
                      <h3>Shopping cart</h3>
                 </div>
             </div>
         </nav>
 <section style="height:auto;min-height:80vh">
-<div >
+<div class="container">
 <table>
     <thead>
         <tr>
@@ -86,10 +76,12 @@
 	    let cart = localStorage.getItem('cart');
 	    return cart ? JSON.parse(cart) : {};
 	}
+	
 	function isCart(){
 		let cart = localStorage.getItem('cart');
 		return cart ? true:false;
 	}
+	
 	document.addEventListener('DOMContentLoaded', function() {
 	    let cartItems = getCart();
 	    let cartItemsJson = JSON.stringify(cartItems);
