--- a/Product/src/main/resources/templates/index.html
+++ b/Product/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Shop Homepage - Start Bootstrap Template</title>
+        <title>E-Commerce</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -13,21 +13,11 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
+                <a class="navbar-brand" href="#!">E-Commerce</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">All Products</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-                            </ul>
-                        </li>
+                       	
                     </ul>
                     <a th:href="@{/cart}">
                         <button class="btn btn-outline-dark" type="submit">
@@ -44,9 +34,12 @@
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">Shop in style</h1>
                     <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
-                    <div class="mt-2">
+                    <div class="mt-2" th:if="${!isAuth}">
                      <a  th:href="@{/login}">	<button class="btn btn-primary">Login</button></a>
-                     <a  th:href="@{/login}">	<button class="btn btn-info">Register</button></a>
+                     <a  th:href="@{/register}">	<button class="btn btn-info">Register</button></a>
+                    </div>
+                     <div class="mt-2" th:if="${isAuth}">
+                    	<a  th:href="@{/deconnecter}">	<button th:onclick="ClearCart()" class="btn btn-primary">Logout</button></a>
                     </div>
                 </div>
             </div>
@@ -126,6 +119,10 @@
         if (cartLengthDisplay) {
             cartLengthDisplay.innerText = cartLength;
         }
+    }
+    
+    function ClearCart(){
+   	  localStorage.clear();
     }
     updateCartLengthDisplay()
     </script>
