--- a/Product/src/main/resources/templates/admin/products/ListProduct.html
+++ b/Product/src/main/resources/templates/admin/products/ListProduct.html
@@ -40,7 +40,7 @@ background-color: whitesmoke;}
     </ul>
     <hr>
     <button class="btn btn-info"   >
-    	<a th:href="@{/users/logout}">Logout</a>
+    	<a th:href="@{/deconnecter}">Logout</a>
     </button>
 </div>
 <div class="container m-5 p-5 ">
